<resources>
	<string name="app_name" translatable="false">EnergyTaxi</string>
	<string name="address_customer">Your address</string>
	<string name="address_delivery">Delivery address</string>
	<string name="customer_telephone_number">Customer telephone number</string>
	<string name="button_order">Order</string>
	<string name="rating_message">Please rate the driver</string>
	<string name="your_work_experience_in_driving">Your work experience in driving(in years)</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="waiting_driver_response">Waiting for driver response</string>
	<string name="title_activity_maps">MapsActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="count_orders">Count orders</string>
	<string name="adderess">Adderess</string>
	<string name="average_rating">Average rating</string>
	<string name="cars_name">Cars name</string>
	<string name="drivers_fullname">Drivers fullname</string>
	<string name="conditions_for_obtaining_a_rank">Conditions for obtaining a rank:</string>
	<string name="history">History</string>
	<string name="payment">Payment</string>
	<string name="favourite_addresses">Favourite addresses</string>
	<string name="favourite_drivers">Favourite drivers</string>
	<string name="bonuses">Bonuses:</string>
	<string name="nav_bonuses">Bonuses</string>
	<string name="help">Help</string>
	<string name="todo">TODO</string>
	<string name="unknown">Unknown</string>
	<string name="current_address">Current Address</string>
	<string name="place_of_departure">Place of departure:</string>
	<string name="department">From</string>
	<string name="destination">To</string>
	<string name="apply_address_button_text">Apply Address</string>
	<string name="pick_favourite_driver_text">You can pick your favourite driver on a map</string>
	<string name="click_tos_select_address_map">Click on map to select the address</string>
	<string name="price_value">PRICE:</string>
	<string name="cancel">Cancel</string>
	<string name="standard">Standard</string>
	<string name="comfort">Comfort</string>
	<string name="elite">Elite</string>
	<string name="see_car_recommendations">See Car Recommendations</string>
	<string name="is_online">Online</string>
	<string name="delete">Delete</string>
	<string name="Back">Back</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="order">Order</string>
	<string name="please_select_address_from_toast_text">Please select address from</string>
	<string name="please_select_address_to_toast_text">Please select address to</string>
	<string name="same_addresses">The addresses are same</string>
	<string name="orders">Orders</string>
	<string name="comments">Comments</string>
	<string name="sale">Sale</string>
	<string name="count_of_free_order_by_car_class">Count of free order by car class</string>
	<string name="your_stats_and_count_of_orders_with_sale">Your stats and count of orders with sale</string>
	<string name="bonuses_info">Rank Bonuses info</string>
	<string name="deadline">Deadline:</string>
	<string name="wait_until">Wait until</string>
	<string name="error_to_get_user_stats">Error to get user stats</string>
	<string name="error_to_get_base_rank_user_info">Error to get base rank user info</string>
	<string name="error_to_get_user_order_price_by_class">Error to get user order price by class</string>
	<string name="error_to_add_order">Error to add order</string>
	<string name="error_to_like_driver">Error to like driver</string>
	<string name="driver_successfully_liked">Driver successfully liked</string>
	<string name="successfully_add_order">Order successfully complete</string>
	<string name="military_bonuses">Military Bonuses</string>
	<string name="load_document">Load Document</string>
	<string name="failed_delete_document">Failed to delete your document</string>
	<string name="failed_get_military_bonuses">Failed to get military bonuses</string>
	<string name="military_bonuses_notice">If you are a member of the armed forces and have a document that proves it,
		you can show it to us and get a discount on every trip forever value of
	</string>
	<string name="military_bonuses_waiting_notice">Please wait until admin confirm your document, and you will get
		sale
	</string>
	<string name="military_bonuses_complete_notice">Your document confirmed, so you have sale on each order</string>
	<string name="military_bonuses_delete_button">Delete Document</string>
	<string name="military_bonuses_delete_notice">Your document deleted and you will never have a sale</string>
	<string name="user_sale_order">Use sale on order</string>
	<string name="user_free_order_on_standard">Use free order on standard</string>
	<string name="user_free_order_on_comfort">Use free order on comfort</string>
	<string name="user_free_order_on_elite">Use free order on elite</string>
	<string name="sale_bonus">Sale Bonus</string>
	<string name="pick_car_class">Pick car class</string>
	<string name="free_order_bonus">Free order bonus</string>
	<string name="your_phone">Your phone</string>
	<string name="your_name">Your name</string>
	<string name="please_enter_phone">Please enter your phone number so that the driver can contact you</string>
	<string name="error_find_driver">Error starting driver search</string>
	<string name="no_driver">Sorry, there are no driver</string>
	<string name="pleas_select_class">Please select car class</string>
	<string name="evaluate">Evaluate</string>
	<string name="please_leave_a_comment">Please leave a comment</string>
	<string name="rating">Rating</string>
	<string name="date">Date</string>
	<string name="price">Price</string>
	<string name="number_of_kilometers">Number of kilometers</string>
	<string name="profile">Profile</string>
	<string name="fullname">Fullname</string>
	<string name="car">Car</string>
	<string name="experience">Experience</string>
	<string name="salary">Salary</string>
	<string name="back">back</string>
	<string name="complete_order">Complete order</string>
	<string name="order_info">Order Info</string>
	<string name="customer_name">Customer Name</string>
	<string name="customer_address">Customer Address</string>
	<string name="delivery_address">Delivery Address</string>
	<string name="customer_telephone_number_current_order">Customer Telephone Number</string>
	<string name="no_recommendations">No Recommendations</string>
	<string name="accept">Accept</string>
	<string name="reject">Reject</string>
	<string name="recommended_car">Recommended Car</string>
	<string name="car_class">Car Class</string>
	<string name="price_per_kilometer">Price Per Kilometer</string>
	<string name="new_salary">New Salary</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="register_as_user">Register as User</string>
	<string name="register_as_driver">Register as driver</string>
	<string name="log_in">Login</string>
	<string name="login_as_a_driver">Login as a driver</string>
	<string name="energy_taxi">Energy Taxi</string>
	<string name="register">Register</string>
	<string name="resume">Resume</string>
	<string name="send">Send</string>
	<string name="first_name">First Name</string>
	<string name="surname">Surname</string>
	<string name="patronymic">Patronymic</string>
	<string name="telephone_number">Telephone Number</string>
	<string name="experience_in_years">Experience (in years)</string>
	<string name="energytaxilogo">EnergyTaxiLogo</string>
	<string name="registration">Registration</string>
	<string name="driver_accept_your_order">Driver accept your order</string>
	<string name="sorry_driver_reject_your_order">Sorry, driver reject your order</string>
	<string name="error_to_get_distance">Error to get distance</string>
	<string name="distance_is_to_short">Distance between your source and destination is to small</string>
	<string name="distance_is_to_long">Distance between your source and destination is to long</string>
	<string name="contact_us">Contact Us</string>
	<string name="call">Call</string>
	<string name="email">Email</string>
	<string name="xxx_xxx_xxx_xxx">XXX-XXX-XXX-XXX</string>
	<string name="energytaxihelp_gmail_com">energytaxihelp@gmail.com</string>
	<string name="telegram">Telegram</string>
	<string name="t_me_energytaxihelp">t.me/energytaxihelp</string>
	<string name="welcome_to_energy_taxi">Welcome to Energy Taxi</string>
	<string name="token_expired">Token expired</string>
	<string name="user_name_to_small">Username must have min 4 letters and max 16</string>
	<string name="driver_first_name_to_small">Firstname must have min 2 letters and max 20</string>
	<string name="driver_first_name_empty">Please input firstname</string>
	<string name="driver_surname_to_small">Surname must have min 2 letters and max 30</string>
	<string name="driver_surname_empty">Please input surname</string>
	<string name="driver_patronymic_to_small">Patronymic must have min 2 letters and max 30</string>
	<string name="driver_patronymic_empty">Please input patronymic</string>
	<string name="driver_telephone_invalid">Invalid telephone number</string>
	<string name="driver_experience_negative">Experience must be greater than zero</string>
	<string name="driver_experience_empty">Please input experience</string>
	<string name="bad_credentials">Bad credentials</string>
	<string name="not_user">You are not a user</string>
	<string name="not_driver">You are not a driver</string>
	<string name="waiting_answer">waiting answer</string>
	<string name="user_already_exist">Username is already exist</string>
	<string name="username_empty">Please input username</string>
	<string name="username_not_found">User not found</string>
	<string name="user_password_to_small">Password must have min 8 letters and max 20</string>
	<string name="user_password_empty">Please input password</string>
	<string name="old_password_invalid">Old password is invalid</string>
	<string name="password_changed">Password changed</string>
	<string name="no_register_yet">Not registered yet? Sign up</string>
	<string name="already_register">Already registered? Log in</string>
	<string name="forgot_password">Forgot password</string>
	<string name="same_password">Same passwords</string>
	<string name="invalid_user_credentials">"Username or password not correct"</string>
	<string name="rank">Rank</string>
	<string name="new_username">New Username</string>
	<string name="current_password">Current Password</string>
	<string name="new_password">New Password</string>
	<string name="user_profile_military_bonus">User has military bonus</string>
	<string name="valid_token">Token is valid</string>
	<string name="gps_is_disable_want_turn_on">GPS disabled. Do you want to turn on GPS, so you don\'t have to manually enter your address</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="continue_gps_permission">Continue</string>
	<string name="user">User</string>
	<string name="driver">Driver</string>
	<string name="login_as_user_or_driver">Who do you want to log in with?</string>
	<string name="hide_password">********</string>
	<string name="submit_resume">Submit resume</string>
</resources>
