<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="20dp"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/favouriteDriversRecycleView">

	<TextView
			android:id="@+id/favouriteDriversFullname"
			android:text="@string/drivers_fullname"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:textSize="16sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

	<TextView
			android:id="@+id/favouriteDriversCarName"
			android:text="@string/cars_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:textSize="16sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/favouriteDriversFullname"
	/>
	<TextView
			android:id="@+id/favouriteDriversCountsOrder"
			android:text="@string/count_orders"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:textSize="16sp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
	/>
	<TextView
			android:id="@+id/favouriteDriversAverageRating"
			android:text="@string/average_rating"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="20dp"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/favouriteDriversCountsOrder"

	/>
</androidx.constraintlayout.widget.ConstraintLayout>