<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
            tools:context=".fragments.CarRecFragment">
	<ScrollView android:layout_width="match_parent"
	            android:layout_height="wrap_content">
		<LinearLayout
				android:background="@drawable/card_view_border_reverse"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:baselineAligned="false">
			<TextView
					android:text="@string/recommended_car"
					android:layout_margin="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/driverCarRecText" android:textAlignment="center"
					android:textSize="24sp"/>
			<TextView
					android:text="@string/car"
					android:layout_margin="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/carDriveCarRecText" android:textSize="20sp"/>
			<TextView
					android:background="@drawable/roundcorner_button"
					android:layout_margin="10dp"
					android:textColor="@color/light_blue"
					android:gravity="center"
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/carDriveCarRecEditText" android:textSize="20sp"/>
			<TextView
					android:text="@string/car_class"
					android:layout_width="match_parent"
					android:layout_margin="10dp"
					android:layout_height="wrap_content" android:id="@+id/carClassDriveCarRecText" android:textSize="20sp"/>
			<TextView
					android:background="@drawable/roundcorner_button"
					android:layout_margin="10dp"
					android:textColor="@color/light_blue"
					android:gravity="center"
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/carClassDriveCarRecEditText"
					android:textSize="20sp"/>
			<TextView
					android:text="@string/price_per_kilometer"
					android:layout_margin="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/pricePKDriverCarRecText" android:textSize="20sp"/>
			<TextView
					android:background="@drawable/roundcorner_button"
					android:layout_margin="10dp"
					android:textColor="@color/light_blue"
					android:gravity="center"
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/pricePKDriverCarRecEditText"
					android:textSize="20sp"/>
			<TextView
					android:text="@string/new_salary"
					android:layout_margin="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/salaryDriveCarRecText" android:textSize="20sp"/>
			<TextView
					android:background="@drawable/roundcorner_button"
					android:layout_margin="10dp"
					android:textColor="@color/light_blue"
					android:gravity="center"
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/salaryDriveCarRecEditText"
					android:textSize="20sp"/>
			<LinearLayout
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="match_parent">
				<Button
						android:text="@string/accept"
						android:layout_width="wrap_content"
						android:layout_margin="10dp"
						android:textColor="@color/light_blue"
						android:background="@drawable/roundcorner_button"
						android:layout_height="wrap_content" android:id="@+id/acceptDriveCarRecButton"
						android:layout_weight="1"/>
				<Button
						android:text="@string/reject"
						android:layout_width="wrap_content"
						android:layout_margin="10dp"
						android:textColor="@color/light_blue"
						android:background="@drawable/roundcorner_button"
						android:layout_height="wrap_content" android:id="@+id/rejectDriveCarRecButton"
						android:layout_weight="1"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</FrameLayout>