<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:background="@drawable/card_view_border_reverse"
                                                   android:paddingBottom="10dp">

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:text="@string/login_as_user_or_driver"
			android:layout_margin="10dp"
			android:textSize="20sp"
			android:gravity="center"
			android:id="@+id/loginAsUserOrDriverTextView"/>
	<Button
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginTop="10dp"
		android:id="@+id/loginAsUserWelcomeButton"
		android:text="@string/user"
		android:textColor="@color/light_blue"
		android:background="@drawable/roundcorner_button"
		app:layout_constraintTop_toBottomOf="@+id/loginAsUserOrDriverTextView"
		app:layout_constraintEnd_toStartOf="@+id/loginAsDriverWelcomeButton"/>
	<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="10dp"
			android:layout_marginTop="10dp"
			android:text="@string/driver"
			android:textColor="@color/light_blue"
			android:background="@drawable/roundcorner_button"
			android:id="@+id/loginAsDriverWelcomeButton"
			app:layout_constraintStart_toEndOf="@+id/loginAsUserWelcomeButton"
			app:layout_constraintTop_toBottomOf="@+id/loginAsUserOrDriverTextView"
	/>
</androidx.constraintlayout.widget.ConstraintLayout>