<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:background="@drawable/card_view_border_reverse"
                                                   android:paddingBottom="10dp"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:inputType="textPassword"
			android:textColor="@color/dark_blue"
			android:backgroundTint="@color/dark_blue"
			android:hint="@string/current_password"
			android:padding="20dp"
			android:drawableStart="@drawable/password_lock_solid_svgrepo_com"
			android:drawableTint="@color/dark_blue"
			android:drawablePadding="20dp"
			android:textColorHint="@color/dark_blue"
			android:layout_margin="10dp"
			android:minHeight="48dp"
			android:id="@+id/currentPasswordEditTextPassword"/>
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/currentPasswordEditTextPassword"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:inputType="textPassword"
			android:textColor="@color/dark_blue"
			android:backgroundTint="@color/dark_blue"
			android:hint="@string/new_password"
			android:padding="20dp"
			android:drawableStart="@drawable/password_lock_solid_svgrepo_com"
			android:drawableTint="@color/dark_blue"
			android:drawablePadding="20dp"
			android:textColorHint="@color/dark_blue"
			android:layout_margin="10dp"
			android:minHeight="48dp"
			android:id="@+id/newPasswordEditTextPassword"/>
	<Button
			android:text="@string/send"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			android:textColor="@color/light_blue"
			android:background="@drawable/roundcorner_button"
			android:layout_margin="10dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/newPasswordEditTextPassword"
			android:id="@+id/newPasswordSentButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>