<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:background="@drawable/main_background"
		tools:context=".activities.DriverProfile">
<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true">
	<androidx.cardview.widget.CardView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			app:cardElevation="50dp"
			android:layout_margin="5dp"
			app:cardBackgroundColor="@color/light_blue"
			app:cardCornerRadius="15dp">
		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/card_view_borders"
				android:textAlignment="center">
			<TextView
					android:text="@string/profile"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/driverProfileText"
					android:textAlignment="center"
					android:textColor="@color/light_blue"
					android:layout_alignParentTop="true"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:textSize="34sp" android:layout_marginTop="10dp" android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"/>
			<TextView
					android:text="@string/fullname"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/driverProfileNameText"
					android:layout_below="@+id/driverProfileText"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:textColor="@color/light_blue"
					android:textSize="24sp" android:layout_marginTop="10dp" android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"/>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/roundcorner"
					android:gravity="center"
					android:textSize="24sp"
					android:padding="10dp"
					android:layout_below="@+id/driverProfileNameText"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:id="@+id/driverProfileNameEditText"
					android:layout_marginTop="10dp" android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"/>
			<TextView
					android:text="@string/car"
					android:layout_margin="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/light_blue"
					android:layout_below="@+id/driverProfileNameEditText"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:id="@+id/driverProfileCarNameText"
					android:textSize="24sp"/>
			<TextView
					android:layout_width="match_parent"
					android:background="@drawable/roundcorner"
					android:gravity="center"
					android:textSize="24sp"
					android:padding="10dp"
					android:layout_height="wrap_content"
					android:layout_below="@+id/driverProfileCarNameText"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:id="@+id/driverProfileCarNameEditText"
					android:layout_marginTop="10dp" android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"/>
			<TextView
					android:text="@string/experience"
					android:layout_margin="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/light_blue"
					android:layout_below="@+id/driverProfileCarNameEditText"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:id="@+id/driverProfileExperienceText"
					android:textSize="24sp"/>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/driverProfileExperienceText"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:id="@+id/driverProfileExperienceEditText"
					android:background="@drawable/roundcorner"
					android:gravity="center"
					android:textSize="24sp"
					android:padding="10dp"
					android:layout_marginTop="10dp" android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"/>
			<TextView
					android:text="@string/salary"
					android:layout_margin="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/driverProfileExperienceEditText"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:id="@+id/driverProfileSalaryText"
					android:textColor="@color/light_blue"
					android:textSize="24sp"/>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/roundcorner"
					android:gravity="center"
					android:textSize="24sp"
					android:padding="10dp"
					android:layout_below="@+id/driverProfileSalaryText"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:id="@+id/driverProfileSalaryEditText"
					android:layout_marginTop="10dp" android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"/>
			<Button
					android:text="@string/back"
					android:layout_margin="10dp"
					android:textColor="@color/dark_blue"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/driverProfileSalaryEditText"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:background="@drawable/roundcorner"
					android:id="@+id/driverProfileBackButton"/>
		</RelativeLayout>
	</androidx.cardview.widget.CardView>
</ScrollView>
</RelativeLayout>